Fix wrapping issue

--- a/styles/app.scss
+++ b/styles/app.scss
@@ -284,7 +284,7 @@ table {
     line-height: 30px;
 
     p {
-        display: flex;
+        overflow: auto;
     }
 }
 
@@ -405,4 +405,5 @@ table {
 
 .headshot {
     margin: 0 15px 15px 0;
+    float: left;
 }
